--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,30 @@
 html, body {
   margin: 20px;
 }
+
+a {
+  cursor: pointer
+}
+
+.form-text {
+  padding-top: 7px;
+}
+
+.navbar img.user-icon {
+  width: 36px;
+  height: 36px;
+}
+
+img.profile.user-icon {
+  width: 64px;
+  height: 64px;
+}
+
+/* Bootstrap overrides */
+
+@media (min-width: 768px) {
+  .navbar-nav > li > a.user-icon {
+    padding-top: 14px;
+    padding-bottom: 14px;
+  }
+}
